# secha-metadata

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  lineage.py  pyproject.toml  validate.py
.github/workflows/: ci.yml
canonical/: canonical_schema.yaml  quantity_vocabulary.yaml  units.yaml
docs/: lineage_mx_electrix.md
meta-schemas/: mapping.schema.json  source_schema.schema.json  validation.schema.json
targets/: canonical.yaml
tests/: test_configs_valid.py  test_lineage_current.py
tests/fixtures/mx_electrix/: expected_canonical.json  raw_measurements_sample.json
transforms/: library.yaml
vendors/mx_electrix/: CHANGELOG.md  mapping.yaml  source_schema.yaml  validation.yaml
